--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-from flask import Flask, render_template, request, jsonify, redirect, url_for 
+fastapi==0.95.1
+uvicorn==0.22.0
+pydantic==1.10.8
+numpy==1.24.3
+pandas==2.0.1
+scikit-learn==1.2.2
+joblib==1.2.0
+kaggle==1.5.13
+python-multipart==0.0.6
